performance changes
changed to .valueOf
removed unused strings