@@ -108,7 +108,7 @@ public class MainActivity extends AppCompatActivity implements Serializable, Mai
                     while (myReader.hasNextLine()) {
                         String data = myReader.nextLine();
                         String arr[] = data.split(",");
-                        photoListPresenter.addPhoto(new Photo(arr[0], new Double(arr[2]), new Double(arr[1]), arr[3], arr[4]));
+                        photoListPresenter.addPhoto(new Photo(arr[0], Double.valueOf(arr[2]), Double.valueOf(arr[1]), arr[3], arr[4]));
                     }
                     displayPhoto(photoListPresenter.getPhoto());
                     break;
